with fixed nav, gave it z-index 1 and changed first section to have a top margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,15 @@ body {
     margin: 0;
 }
 
+.margin-top-section {
+    margin-top: 75px;
+}
+
 .row {
     width: 100%;
     margin: 0px;
 }
+
 .content-divider {
     width: 100px;
     border: 2px solid #555555;
